@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-13348.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-13351.tgz',
      'xapian-core.tgz',
-     'ae38b966f1ae7d192217656e16dddfe60516e600',
+     '90ab87e99bced6d795bc822d5e22e220aa66cfed',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-13348.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-13351.tgz',
      'xapian-bindings.tgz',
-     'd62f21952b7f29bf413c72473d1d8094164a1821',
+     '44deabfd265e645afee58f52341b44aeb2e43276',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-13348.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-13351.tgz',
      'win32msvc.tgz',
-     '8a5ad5f6d301426e8d2622d4663440d2419af29d',
+     '20282165b08d7470edc8e15ed493c444ca614ed2',
      'xapian-core/win32',
     ),
     ('Xapian extras',
